--- a/src/main/WebApp/Recursos/estilos.css
+++ b/src/main/WebApp/Recursos/estilos.css
@@ -2,22 +2,27 @@
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
-
-
 }
+
 .enter {
   margin: 0 auto;
   display: inline-block;
 }
+
 body {  
         background-image:url('imagen5.jpg');
 		background-repeat: no-repeat;
 		background-position: down;
-		background-size: 1880px 1010px;
+		background-size: 100% 150%;
 	}
-h1 	{
+	
+h1{
 		font-size: 3rem;
+		text-align: center;
+		color: white;
+		margin-top: 0.5em;
 	}
+	
 form{
 	margin:auto;
 	width: 50%;
@@ -25,10 +30,14 @@ form{
 	padding: 100px;
 	
 }
+
 h2{
+	font-size: 2rem;
 	text-align: center;
-	
+	color: white;
+	margin-bottom: 2em;
 }
+
 input{
 	display: block;
 	padding: 10px;
@@ -37,7 +46,7 @@ input{
 	font-size: 20px;
 
 }
-input[type="submit"]{
+input[type="button"]{
 	margin-left: auto;
     margin-right: auto;
     float: none;
