Verificacion de login y registro- Nontoa,Corredor

--- a/src/main/webapp/Recursos/estilos.css
+++ b/src/main/webapp/Recursos/estilos.css
@@ -21,9 +21,10 @@ body {
 }
 .scroll
 {
-     overflow-x:scroll;
+     overflow-x:hidden;
      overflow-y:hidden;
 }
+
 #imagenU{
     padding: 5%;
     
