--- a/src/main/webapp/Recursos/login.css
+++ b/src/main/webapp/Recursos/login.css
@@ -7,27 +7,19 @@ and open the template in the editor.
     Created on : 01-nov-2018, 22:02:52
     Author     : Luis
 */
-body {  
-        background-image:url('imagen5.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        min-height: 100vh;
 
-}
 
 input{
     display: block;
     width: 100%;
-        top:auto;
-        left: auto;
-        
+    top:auto;
+    left: auto;   
 }
 
 input[type="button"]{
     margin-left: auto;
-        margin-right: auto;
-        float: none;
+    margin-right: auto;
+    float: none;
     text-align:center;
     width: 60%;
     border-radius:20px;
@@ -44,17 +36,13 @@ input[type="button"]{
 @media(max-widh: 480px){
     form{
         width:90%;
-
-    }
-        
-
-        
+    }     
 }
 
 #Botones{
     margin-left: auto;
-        margin-right: auto;
-        float: none;
+    margin-right: auto;
+    float: none;
     text-align:center;
     width: 50%;
     border-radius:20px;
@@ -62,21 +50,44 @@ input[type="button"]{
 form{
     margin:auto;
     width: 50%;
-        position: absolute;
-        top: 25%;
-        left: 35%;
+    position: absolute;
+    top: 25%;
+    left: 35%;
     max-width: 500px;
     padding: 30px;
-        
-    
 }
-h2{
-    text-align:center;
-}
+
 #imagenU{
     width: 100%;
     height: 80%;
     position: absolute;
-    top: 70%;  
+    top: 85%;  
     left: 0.5%;
+}
+
+#imagenLog{
+  width: 30%;
+  height: 30%;
+  position: absolute;
+  top: 10%;
+  left: 30%;
+}
+
+#imagenNew{
+  width: 10%;
+  height: 10%;
+  position: absolute;
+  top: 10%;
+  left: 30%;
+}
+
+#Cuadro_email{
+	display: block;
+	font-size: 150%;
+}
+
+#Cuadro_pass{
+	display: block;
+	font-size: 150%;
+	margin-bottom: 2em;
 }
