--- a/src/main/webapp/Recursos/registro.css
+++ b/src/main/webapp/Recursos/registro.css
@@ -1,11 +1,12 @@
-body {  
-        background-image:url('imagen5.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        min-height: 100vh;
-
-}
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : 01-nov-2018, 22:02:52
+    Author     : Luis
+*/
 
 input{
 	display: block;
@@ -29,17 +30,12 @@ input[type="button"]{
 	form{
 		width:75%;
 	}
-      
-        
+     
 }
 @media(max-widh: 480px){
 	form{
 		width:90%;
-
-	}
-        
-
-        
+	} 
 }
 
 #Botones{
@@ -50,6 +46,7 @@ input[type="button"]{
 	width: 50%;
 	border-radius:20px;
 }
+
 form{
 	margin:auto;
 	width: 50%;
@@ -57,20 +54,21 @@ form{
         top: 25%;
         left: 35%;
 	max-width: 500px;
-	padding: 30px;
-        
-	
+	padding: 30px;	
 }
+
 h2{
     text-align:center;
 }
+
 #imagenU{
     width: 100%;
     height: 80%;
     position: absolute;
-    top: 70%;  
+    top: 85%;  
     left: 0.5%;
 }
+
 #Cuadro_email{
 	display: block;
 	font-size: 150%;
