--- a/src/main/webapp/Recursos/usuarios.css
+++ b/src/main/webapp/Recursos/usuarios.css
@@ -1,45 +1,250 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url(menu.css);
 *{
     margin:0;
     padding: 0;
-    box-sizing: border-box;
+
 }
-body{
-    font-family: 'Open Sans', sans-serif;
+body{   
+    padding: 0; 
+    margin: 0;
+    display: block;
+
+}
+.invest-color {
+    background-color: #EFEBE9;
+}
+header{
+    width: 100%;
+    height: 20%;
+    position: relative;
+    background: #990000;
+    top: 0;
+    left: 0;
+}
+header #logoescuela {
+    float: right;
+}
+header #logoescuela {
+    float: right;
+    position: relative;
+}
+element.style {
 }
 
+.contenedorlogos {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+.contenedorlogos img{
+    margin-top: 5px;
+    width: 85%;
+}
+div {
+    display: block;
+}
+element.style {
+    display: block;
+}
+.img-responsive {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 10px auto;
+}
+div {
+    display: block;
+}
+
+element.style {
+}
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 10px auto;
+}
+div {
+    display: block;
+}
+center {
+    display: block;
+    text-align: -webkit-center;
+}
+.menu {
+    position: relative;
+    top: 5%;
+    width: 100%;
+    margin: auto;
+    display: flex;
+    background-color: white;
+    z-index: 1000;
+    justify-content: center;
+    font-size: 13px;
+}
+
+.menu a{
+    color: #00767f !important;
+    padding: 5px;
+}
+a {
+    text-decoration: none;
+}
+@media (max-width: 900px){
+    .menu {
+        background-color: #F5F5F5;
+    }
+}
+.container {
+    width: 100%;
+    max-width: 1200px; 
+    margin: 10px auto;
+
+}   
+.toggleMenu {
+    display:  none; 
+
+    width: 100%;
+   
+   padding-top:5px;
+    padding-bottom: 5px;
+    color: white;
+  
+    font-family:sans-serif;
+    text-align: center;
+}
+.nav {
+    list-style: none;
+     *zoom: 1;
+     background:white;
+    padding: 4px;
+   
+    font-family: sans-serif;
+}
+.nav:before,
+.nav:after {
+    content: " "; 
+    display: table; 
+}
+.nav:after {
+    clear: both;
+}
+.nav ul {
+    list-style: none;
+    width: 9em;
+}
+.nav a { 
+    padding: 7px 10px;
+    color:#1fafff;
+
+  
+}
+.nav li {
+    position: relative;
+}
+.nav > li {
+    float: left;
+    border-top: 1px solid white;
+}
+
+
+@font-face {
+  font-family: "FontAwesome";
+  src: url("fontawesome-webfont.woff");
+}
+
+i {
+  font-family: "FontAwesome", sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  vertical-align: middle;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}
+input{
+    display: block;
+    width: 100%;
+    top:auto;
+    left: auto;   
+}
+input[type="button"]{
+	margin-left: auto;
+        margin-right: auto;
+        float: none;
+	text-align:center;
+	width: 60%;
+	border-radius:20px;
+}
+#imagenNew{
+  position: relative;
+
+}
+#imagenLog{
+  position: relative;
+
+}
 form{
     margin:auto;
-    width: 100%;
+    width: 50%;
     position: absolute;
-    top: 15%;
-    left: 20%;
-    max-width: 1200px;
+    top: 20%;
+    left: 30%;
+    max-width: 500px;
     padding: 30px;
 }
-
-header{
-    width:100%;
-    height: 50px;
-    background: #333;
-    color: #fff;
-    
-    position: fixed;
-    top:0;
-    left:0;
-    z-index:100;
-    
+@media(max-widh: 768px){
+	form{
+		width:75%;
+	}
+     
 }
-.contenedor{
-    width: 98%;
+@media(max-widh: 480px){
+	form{
+		width:90%;
+	} 
+}
+#Botones{
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+    text-align:center;
+    width: 50%;
+    border-radius:20px;
+}
+.franjaverde {
+    width: 100%;
+    height: 2.5em;
+    position: relative;
     margin: auto;
+    background-color: #0f8279;
+    text-align: center;
+    font-weight: lighter;
+    color: white;
+    font-family: sans-serif;
+    top: 0px;
+    padding-top: 1px;
+    padding-bottom: 50px;
 }
-h1{
-    float:left;
-    
+footer {
+    width: 100%;
+    background-color: #990000;
+    position: absolute;
+    color: white;
+    padding-top: 30px;
+    padding-bottom: 10px;
+    font-family: sans-serif;
+    font-size: 12px;
+    top:80%;
 }
-header .contenedor{
-    display: table;
-    
-}
+
